modified address name in address management

--- a/src/app/features/settings/_components/order-history/order-history.component.html
+++ b/src/app/features/settings/_components/order-history/order-history.component.html
@@ -2,8 +2,8 @@
   <h2>Your Orders <span class="order-count">{{ orders.length }}</span></h2>
 
 
-  <ng-container *ngFor="let item of orders">
-    <app-order-card [item]="item" />
+  <ng-container *ngFor="let item of orders"; let i = "index">
+    <app-order-card [item]="item.items[0]" />
   </ng-container>
 
 
