--- a/src/app/features/checkout/_components/address-form/address-form.component.html
+++ b/src/app/features/checkout/_components/address-form/address-form.component.html
@@ -7,9 +7,9 @@
 <form [formGroup]="addressForm" (ngSubmit)="onSubmit()" class="address-form">
   <div class="form-grid">
     <div class="form-group">
-      <label>Name</label>
-      <input #nameInput formControlName="fullName" placeholder="Full name" />
-      <div *ngIf="f['fullName'].touched && f['fullName'].invalid" class="error">Name is required.</div>
+      <label>Address Name</label>
+      <input #nameInput formControlName="fullName" placeholder="Address name" />
+      <div *ngIf="f['fullName'].touched && f['fullName'].invalid" class="error">Address Name is required.</div>
     </div>
 
     <div class="form-group">
