modified order history page

--- a/src/app/features/settings/_components/address-management/address-management.component.html
+++ b/src/app/features/settings/_components/address-management/address-management.component.html
@@ -1,5 +1,5 @@
 <div class="address-header">
-  <h2>Manage Addresses</h2>
+  <h2 class="title">Manage Addresses</h2>
   <button class="add-address-btn" (click)="toggleAccordion()">
     <!-- <span></span> Add a New Address -->
   <span>{{ accordionOpen ? '➖ Cancel' : '➕ Add a New Address' }}</span>
