--- a/src/app/features/settings/_components/notification-preferences/notification-preferences.component.html
+++ b/src/app/features/settings/_components/notification-preferences/notification-preferences.component.html
@@ -1,40 +1,22 @@
 <div class="notification-preferences">
   <h2>Notification Preferences</h2>
 
-  <div class="notification-option">
+  <div
+    class="notification-option"
+    *ngFor="let option of notificationOptions"
+    (click)="toggleSetting(option.key)"
+    [@fadeStagger]
+    [class.checked]="settings()[option.key]"
+  >
     <label>
-      <input type="checkbox" [checked]="settings().email" (change)="toggleSetting('email')" />
-      Receive Email Notifications
+      <input
+        type="checkbox"
+        [checked]="settings()[option.key]"
+        (change)="toggleSetting(option.key)"
+      />
+      {{ option.label }}
     </label>
   </div>
 
-  <div class="notification-option">
-    <label>
-      <input type="checkbox" [checked]="settings().sms" (change)="toggleSetting('sms')" />
-      Receive SMS Notifications
-    </label>
-  </div>
-
-  <div class="notification-option">
-    <label>
-      <input type="checkbox" [checked]="settings().push" (change)="toggleSetting('push')" />
-      Receive Push Notifications
-    </label>
-  </div>
-
-  <div class="notification-option">
-    <label>
-      <input type="checkbox" [checked]="settings().orderUpdates" (change)="toggleSetting('orderUpdates')" />
-      Order Updates
-    </label>
-  </div>
-
-  <div class="notification-option">
-    <label>
-      <input type="checkbox" [checked]="settings().promotional" (change)="toggleSetting('promotional')" />
-      Promotional Offers
-    </label>
-  </div>
-
-  <button class="save-btn" (click)="saveSettings()">Save Preferences</button>
+  <button class="save-btn" (click)="saveSettings()" @fadeStagger>Save Preferences</button>
 </div>
