modified product name css whereever possible

--- a/src/app/features/cart/_components/cart-details/cart-details.component.html
+++ b/src/app/features/cart/_components/cart-details/cart-details.component.html
@@ -15,7 +15,7 @@
 
         <div class="product-info">
           <div class="brand-name">{{ getCategoryNameOfProduct(item.product?.category!) }}</div>
-          <div class="product-title">{{ item.product?.name }}</div>
+          <div class="product-title" (click)="navigateToProductPage(item.product!)">{{ item.product?.name }}</div>
 
           <!-- Quantity Selectors -->
           <div class="selectors">
