--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,20 @@
-<div class="dashboard-container">
-  <div class="header-wrapper" *ngIf="showHeader$ | async">
-    <app-header></app-header>
+<app-network-banner *ngIf="showBanner" (retry)="onRetryNetwork()"></app-network-banner>
+
+<ng-container *ngIf="!showBanner">
+  <div class="dashboard-container">
+    <!-- 🌐 Offline Banner -->
+
+    <div class="header-wrapper" *ngIf="showHeader$ | async">
+      <app-header></app-header>
+    </div>
+
+    <div class="body-wrapper">
+      <router-outlet></router-outlet>
+    </div>
+
+    <div class="footer-wrapper">
+      <app-footer></app-footer>
+    </div>
   </div>
 
-  <div class="body-wrapper">
-    <router-outlet></router-outlet>
-  </div>
-
-  <div class="footer-wrapper">
-    <app-footer></app-footer>
-  </div>
-</div>
+</ng-container>
