--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -37,7 +37,7 @@
     <span class="brand-text">Kalagura Gampa</span>
   </div>
 
-  <div class="search-bar">
+  <div class="search-bar" *ngIf="!compact">
     <input type="text" class="search-input" placeholder="Search for products..." [value]="searchQuery()"
       (input)="onSearchChange($event)" (keydown)="onSearchKeyDown($event)" (click)="checkMenuDropdownIsOpen()"
       aria-label="Search for products" />
@@ -66,7 +66,7 @@
 
 
 
-  <div class="header-actions">
+  <div class="header-actions" *ngIf="!compact">
     <div class="account-wrapper" (click)="toggleMenu()" aria-haspopup="true">
       <!-- Account Section -->
       <div class="action-item account-item">
