--- a/src/app/features/settings/_components/user-settings/user-settings.component.scss
+++ b/src/app/features/settings/_components/user-settings/user-settings.component.scss
@@ -25,7 +25,7 @@ $primary-brown: #682f12;
       width: 50px;
       height: 50px;
       border-radius: 50%;
-      background: url('/assets/avatar.svg') center/cover no-repeat, #eee;
+      background: url('../../../../../assets/images/avatar.svg') center/cover no-repeat, #eee;
       margin-right: 12px;
     }
 
