modified payment logic

--- a/src/app/features/cart/_components/price-summary/price-summary.component.html
+++ b/src/app/features/cart/_components/price-summary/price-summary.component.html
@@ -7,6 +7,11 @@
   </div>
 
   <div class="summary-row">
+    <span>Tax Amount</span>
+    <span>₹{{ cart?.taxAmount }}</span>
+  </div>
+
+  <div class="summary-row">
     <span>Discount on MRP</span>
     <span class="green">- ₹{{ cart?.discountAmount }}</span>
   </div>
