--- a/src/app/features/checkout/_components/shipping-billing/shipping-billing.component.html
+++ b/src/app/features/checkout/_components/shipping-billing/shipping-billing.component.html
@@ -29,4 +29,9 @@
       </button>
     </div>
   </div>
+
+   <!-- ✅ CONTINUE BUTTON: Shown only from accordion -->
+   <div *ngIf="showContinueButton" class="continue-btn-wrapper">
+    <button class="btn primary continue-btn" (click)="emitContinue()">Continue →</button>
+  </div>
 </div>
