--- a/src/app/features/product/_components/view-product/view-product.component.html
+++ b/src/app/features/product/_components/view-product/view-product.component.html
@@ -32,7 +32,7 @@
       </div>
 
       <div class="stock-info">
-        <p><span class="stock-count">{{ product()?.stockStatus === 'low_stock' ? 'Low Stock' : 'In Stock' }}</span></p>
+        <p><span class="stock-count">{{ product()?.stockStatus }}</span></p>
       </div>
     </div>
 
